[project]
name = "scmopt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplpy>=0.14.0",
    "colorlover>=0.3.0",
    "faker>=33.1.0",
    "fastai>=2.7.18",
    "fastapi>=0.115.6",
    "geopy>=2.4.1",
    "graphviz>=0.20.3",
    "gurobipy>=12.0.0",
    "holidays>=0.62",
    "intervaltree>=3.1.0",
    "joblib>=1.3.2",
    "jupyterlab-quarto>=0.3.5",
    "kaleido==0.2.1",
    "matplotlib>=3.7.5",
    "mindoptpy>=2.0.0",
    "mypulp>=0.0.12",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "ortools>=9.11.4210",
    "pandas>=2.1.4",
    "plotly>=5.24.1",
    "polyline>=2.0.2",
    "pycaret>=3.3.2",
    "pydantic>=2.10.3",
    "pyvis>=0.3.2",
    "pyvrp>=0.10.1",
    "scipy>=1.11.4",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.0",
    "streamlit-tree-select>=0.0.5",
    "stvis>=0.0.2",
]

[dependency-groups]
dev = [
    "nbdev",
]
